tests/errors/comb-group-in-control.expect
---CODE---
1
---STDERR---
Error: Malformed Structure: 
7 |    group a {
  |          ^ Group with constant done condition are invalid. Use `comb group` instead to define a combinational group.
